--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g mouse on
 set -g history-limit 1000
+set -g mode-keys vi
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
